implementing my own polyhedron

--- a/src/Makefile
+++ b/src/Makefile
@@ -73,6 +73,10 @@ STORAGE_OBJS := $(patsubst %.cpp,%.o,$(STORAGE_SRCS))
 JOIN_SRCS := $(wildcard join/*.cpp)
 JOIN_OBJS := $(patsubst %.cpp,%.o,$(JOIN_SRCS))
 
+#MYMESH source and object
+MYMESH_SRCS := $(wildcard mymesh/*.cpp)
+MYMESH_OBJS := $(patsubst %.cpp,%.o,$(MYMESH_SRCS))
+
 all:  join generator 3dpro
 
 #compress fixer h5tooff
@@ -86,7 +90,7 @@ join: tools/joiner.o $(GEOMETRY_OBJS) $(JOIN_OBJS) $(STORAGE_OBJS) $(INDEX_OBJS)
 generator: tools/generator.o $(SPATIAL_OBJS) $(INDEX_OBJS) $(PPMC_OBJS) $(GEOMETRY_OBJS)
 	$(CXX) -DCGAL_USE_GMP -DCGAL_USE_MPFR -frounding-math $^ $(INCFLAGS) $(CPPFLAGS) $(LIBS) -o ../build/$@
 	
-fixer: tools/fixer.o
+fixer: tools/fixer.o $(MYMESH_OBJS)
 	$(CXX) $^ $(INCFLAGS) $(CPPFLAGS) -o ../build/$@
 	
 h5tooff: tools/H5ToOFF.o
