for supporting arbitrary simplification algorithms

--- a/src/Makefile
+++ b/src/Makefile
@@ -39,7 +39,7 @@ ifeq ($(OS),Windows_NT)
 	CPPFLAGS += -DUSE_GPU
 	LIBS  += -L "$(CUDA_PATH)\lib\x64" -lcuda -lcudart
 else
-	CPPFLAGS += -DBOOST_HAS_THREADS
+	#CPPFLAGS += -DBOOST_HAS_THREADS
 endif
 
 #compile all the cpp files
@@ -88,21 +88,18 @@ JOIN_OBJS := $(patsubst %.cpp,%.o,$(JOIN_SRCS))
 MYMESH_SRCS := $(wildcard mymesh/*.cpp)
 MYMESH_OBJS := $(patsubst %.cpp,%.o,$(MYMESH_SRCS))
 
-all:  join generator 3dpro
+all:  simulator tdbase
 	
-join: tools/joiner.o $(GEOMETRY_OBJS) $(JOIN_OBJS) $(STORAGE_OBJS) $(INDEX_OBJS) $(SPATIAL_OBJS)
-	$(CXX) -DCGAL_USE_GMP -DCGAL_USE_MPFR -frounding-math $^ $(INCFLAGS) $(LIBS) $(CGALFLAGS) $(CPPFLAGS) -o ../build/$@
-	
-generator: tools/generator.o $(SPATIAL_OBJS) $(INDEX_OBJS) $(GEOMETRY_OBJS)
+simulator: tools/simulator.o $(SPATIAL_OBJS) $(INDEX_OBJS) $(GEOMETRY_OBJS)
 	$(CXX) -DCGAL_USE_GMP -DCGAL_USE_MPFR -frounding-math $^ $(INCFLAGS) $(CPPFLAGS) $(LIBS) -o ../build/$@
 	
 nuclei_generator: tools/generate_nuclei.o $(SPATIAL_OBJS) $(INDEX_OBJS) $(GEOMETRY_OBJS)
 	$(CXX) -DCGAL_USE_GMP -DCGAL_USE_MPFR -frounding-math $^ $(INCFLAGS) $(CPPFLAGS) $(LIBS) -o ../build/$@
 
-3dpro: tools/3dpro_toolkit.o $(GEOMETRY_OBJS) $(JOIN_OBJS) $(STORAGE_OBJS) $(INDEX_OBJS) $(SPATIAL_OBJS)
+tdbase: tools/tdbase.o $(GEOMETRY_OBJS) $(JOIN_OBJS) $(STORAGE_OBJS) $(INDEX_OBJS) $(SPATIAL_OBJS)
 	$(CXX) -DCGAL_USE_GMP -DCGAL_USE_MPFR -frounding-math $^ $(INCFLAGS) $(LIBS) $(CGALFLAGS) $(CPPFLAGS) -o ../build/$@
 
-develop: tools/develop.o $(MYMESH_OBJS)
+develop: $(MYMESH_OBJS)
 	$(CXX) $^ $(INCFLAGS) $(CPPFLAGS) -o ../build/$@
 	
 h5tooff: tools/H5ToOFF.o
