--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -22,6 +22,10 @@ file(GLOB GEOMETRY_SRCS
 	geometry/*.cpp
 )
 
+file(GLOB GEOMETRY_CUDA_SRCS
+	geometry/*.cu
+)
+
 file(GLOB INDEX_SRCS
 	index/*.cpp
 )
@@ -51,7 +55,14 @@ target_link_libraries(gauland_heckbert PRIVATE gmp)
 add_executable (lindstrom_turk simplifier/lindstrom_turk.cpp)
 target_link_libraries(lindstrom_turk PRIVATE gmp)
 
-add_executable (tdbase tools/tdbase.cpp ${SPATIAL_SRCS} ${GEOMETRY_SRCS} ${INDEX_SRCS} ${STORAGE_SRCS} ${JOIN_SRCS})
+
+if(DEFINED USE_GPU)
+    enable_language("CUDA")
+    add_executable (tdbase tools/tdbase.cpp ${SPATIAL_SRCS} ${GEOMETRY_SRCS} ${GEOMETRY_CUDA_SRCS} ${INDEX_SRCS} ${STORAGE_SRCS} ${JOIN_SRCS})
+else()
+    add_executable (tdbase tools/tdbase.cpp ${SPATIAL_SRCS} ${GEOMETRY_SRCS} ${INDEX_SRCS} ${STORAGE_SRCS} ${JOIN_SRCS})
+endif()
+    
 target_link_libraries(tdbase PRIVATE gmp mpfr ${Boost_LIBRARIES} ZLIB::ZLIB pthread OpenMP::OpenMP_CXX)
 
 add_executable (simulator tools/simulator.cpp ${SPATIAL_SRCS} ${GEOMETRY_SRCS} ${INDEX_SRCS} ${STORAGE_SRCS} ${JOIN_SRCS})
